--- a/backend/src/main/resources/ValidationMessages.properties
+++ b/backend/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,3 @@
 email_blank_error_message=Please enter an email address
 operation_sum_blank_error_message=Please enter an operation sum
-remained_balance_blank_error_message=Please enter an operation sum
+remained_balance_blank_error_message=Please enter remained balance value
